# board_odometry

./: .gitignore  .gitmodules  CITACION.cff  CMakeLists.txt  README.md  main.cpp  main_l.cpp  main_v.cpp  runner.py
analysis/: experiments.ipynb  odomtry_eda.ipynb
app/: CMakeLists.txt  app.cpp
app/include/: app.h
experiments/: CMakeLists.txt  run_combined.cpp  test_madgwick.cpp
experiments/image_gen/: CMakeLists.txt  perspective_transform.cpp
experiments/runner/: CMakeLists.txt  package.xml  run.sh  runner.cpp
lib/include/: Logger.h  Logging.h  StateManager.h  ret_codes.h  types.h
lib/video/: CMakeLists.txt  Camera.cc  Camera.h  Common.cc  Common.h  Display.cc  Display.h  DrawingOverlay.cc  DrawingOverlay.h  ISP.cc  ISP.h  Overlay.cc  Overlay.h  RGA.cc  RGA.h  Stream.cc  Stream.h  VideoChannel.h  VideoOutput.cc  VideoOutput.h
local/: CMakeLists.txt  control.cpp  mission.csv  mkexp.sh  output.txt  read_gz.cpp  run_simulation.py  run_simulation.sh  time.h  topics.txt
local/models/drone_with_camera/: model.sdf
local/models/dumpster/: model.sdf
local/models/floating_camera/: model.config  model.sdf
local/models/gimbal_small_3d/: model.sdf
local/models/iris_base/: model.sdf
local/models/iris_with_ardupilot2/: model.sdf
local/models/iris_with_gimbal2/: model.sdf
local/models/iris_with_standoffs2/: model.sdf
local/models/rover_playpen/: model.sdf
local/worlds/: iris_playpen.sdf  rover_playpen.sdf
odometry/: CMakeLists.txt
odometry/include/: correction.h  ekf.h  odometry.h  processor.h
odometry/src/: correction.cpp  flow_odometry.cpp  odometry.cpp  orb_odometry.cpp  processor.cpp
output/: ORB_Clear4.txt
samples/: 1.csv  2.csv  3.csv  3_2.csv  3_3.csv  3_4.csv  3_5.csv  4.csv  5.csv  A1.csv  A2_1.csv  A2_2.csv  A3_1.csv  A3_2.csv
serial/: CMakeLists.txt  serial.cpp
serial/include/: serial.h
utils/: angular.h  csv.h  ma_buf.h  structs.h
